--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "body-parser": "~1.18.2",
+    "cheerio": "^1.0.0-rc.2",
     "co": "~4.6.0",
     "compression": "~1.7.0",
     "connect-mongo": "~2.0.0",
