--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,21 @@
+# Dependency directories
 node_modules/
-.monitor
-.idea
-config/env/env.json
-Makefile
-.DS_Store
+
+# dotenv environment variables file
 .env
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+.idea
+.vscode
