--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "type": "git",
     "url": "https://github.com/nishcheretova/parser"
   },
+  "scripts": {
+    "start": "./node_modules/.bin/cross-env NODE_ENV=development ./node_modules/.bin/nodemon server.js",
+    "debug": "./node_modules/.bin/cross-env NODE_ENV=development ./node_modules/.bin/nodemon --debug server.js",
+    "test": "./node_modules/.bin/cross-env NODE_ENV=test ./node_modules/.bin/babel-tape-runner test/test-*.js"
+  },
   "engines": {
     "node": ">=6.x"
   },
@@ -23,12 +28,15 @@
     "co": "~4.6.0",
     "compression": "~1.7.0",
     "connect-mongo": "~2.0.0",
+    "cookie-parser": "~1.4.0",
+    "cookie-session": "~2.0.0-beta.3",
+    "cors": "~2.8.0",
+    "cross-env": "~5.1.0",
     "dotenv": "~4.0.0",
     "express": "~5.0.0-alpha.6",
     "express-session": "~1.15.0",
     "forever": "~0.15.1",
     "mongoose": "~4.13.0",
-    "mongoose-geojson-schema": "~2.1.2",
     "needle": "^2.2.0"
   },
   "devDependencies": {
